Commit 6: Estoy desesperado y ya no sé qué hacer

--- a/index.html
+++ b/index.html
@@ -350,16 +350,9 @@
       <footer class="pie__pagina">
         <p class="pie__texto">
           © 2025 -Información basada en recursos web como
-          <a class="pie__a" href="https://getbem.com/" target="_blank"
-            >🧱 BEM 🧱</a
-          >
+          <a class="pie__a" href="https://getbem.com/" target="_blank">🧱 BEM 🧱</a>
           /
-          <a
-            class="pie__a"
-            href="https://keepcoding.io/blog/camelcase-que-es-como-funciona-y-beneficios/"
-            target="_blank"
-            >🐪 camelCase 🐪</a
-          >.
+          <a class="pie__a" href="https://keepcoding.io/blog/camelcase-que-es-como-funciona-y-beneficios/" target="_blank">🐪 camelCase 🐪</a>.
         </p>
       </footer>
     </main>
