Se completó todo lo que necesitaba, ahora se viene mi 0/20

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <article class="tarjeta">
           <!-- Imagen de la tarjeta -->
           <div class="tarjeta__imagen">
-            <img src="img/BTSA.jpg" alt="Imagen promocional del grupo BTS" />
+            <img src="img/BTS111.jpeg" alt="Imagen promocional del grupo BTS" />
           </div>
           <!-- Contenido de la tarjeta -->
           <div class="tarjeta__contenido">
